# whaletail-examples

WhailTail_10BASE-T1L/: main.cpp
WhailTail_10BASE-T1L/SparkFun_ADIN1110_Arduino_Library/src/: ADIN1110_mac_typedefs.h  adi_mac.h  adin1110.c  adin1110.h  fcs.c
WhailTail_10bt1l/: CMakeLists.txt
WhailTail_10bt1l/SparkFun_ADIN1110_Arduino_Library/src/: ADIN1110_phy_addr_rdef.h  SparkFun_SinglePairEthernet.cpp  adi_eth_common.h  adi_mac.c  adi_spi_oa.c  boardsupport_ard.cpp
WhailTail_10bt1l/SparkFun_ADIN1110_Arduino_Library_new/src/: ADIN1110_mac_addr_rdef.h  SparkFun_SinglePairEthernet.h  adi_phy.c  adi_phy.h  adi_spi_generic.c  adi_spi_generic.h  adi_spi_oa.h  boardsupport.h  hal.c  hal.h  hal_port_specific.h  sfe_spe_advanced.cpp  sfe_spe_advanced.h
WhailTail_SensorLoopDrive/: CMakeLists.txt  main.cpp  spi_port.c  spi_port.h
